--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
     restart: always
     ports:
       - '5432:5432'
+  test-db:
+    image: postgres
+    restart: always
+    ports:
+      - '5433:5432'
     environment:
       POSTGRES_PASSWORD: pass123
   # pgadmin:
